--- a/app/src/main/res/layout/activity_flash.xml
+++ b/app/src/main/res/layout/activity_flash.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="#ffff"
     android:orientation="vertical"
-    tools:context=".FlashActivity">
+    tools:context=".ui.FlashActivity">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/daily_task_logo"
+        app:srcCompat="@drawable/diulifeicon"
         tools:layout_editor_absoluteX="154dp"
         tools:layout_editor_absoluteY="277dp" />
 
