--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -28,6 +28,7 @@
 
 
             <TextView
+                android:id="@+id/subject_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Physics II - SAH"
@@ -38,6 +39,7 @@
                 android:textColor="#FF5252"
                 android:textStyle="bold"/>
             <TextView
+                android:id="@+id/time_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="8:30 AM - 10:00 AM"
@@ -49,6 +51,7 @@
                 />
 
             <TextView
+                android:id="@+id/day_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
