--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="5dp"
         app:cardUseCompatPadding="true"
         app:contentPadding="2dp"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="#80D8FF"
         android:layout_marginLeft="10dp"
         app:cardCornerRadius="5dp">
         <LinearLayout
@@ -22,36 +22,25 @@
             android:layout_weight="1"
             android:gravity="center"
             android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
+            android:paddingVertical="5dp"
             android:orientation="vertical">
 
 
 
             <TextView
-                android:id="@+id/subject_text"
+                android:id="@+id/title_list_note"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Physics II - SAH"
+                android:text="title"
                 android:fontFamily="@font/aclonica"
                 android:textAlignment="textStart"
                 android:textSize="14sp"
                 android:layout_marginBottom="10dp"
-                android:textColor="#FF5252"
-        />
-            <TextView
-                android:id="@+id/time_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="8:30 AM - 10:00 AM"
-                android:fontFamily="sans-serif-medium"
-                android:textAlignment="textStart"
-                android:textSize="13sp"
-                android:layout_marginBottom="10dp"
-                android:textColor="#3E3E3E"
-                />
+                android:textColor="#2962FF"/>
+
 
             <TextView
-                android:id="@+id/day_text"
+                android:id="@+id/note_list_note"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
@@ -59,7 +48,7 @@
                 android:text="Sunday, Tuesday, Thursday"
                 android:textAlignment="textStart"
                 android:textColor="#000000"
-                android:textSize="12sp"
+                android:textSize="13sp"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
