--- a/app/src/main/res/layout/note_list.xml
+++ b/app/src/main/res/layout/note_list.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="5dp"
         app:cardUseCompatPadding="true"
         app:contentPadding="2dp"
-        app:cardBackgroundColor="#80D8FF"
+        app:cardBackgroundColor="#FFE979"
         android:layout_marginLeft="10dp"
         app:cardCornerRadius="5dp">
         <LinearLayout
@@ -21,8 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+
             android:orientation="vertical">
 
 
@@ -32,18 +31,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="title"
+                android:background="#FF8C36"
+                android:padding="10dp"
                 android:fontFamily="@font/aclonica"
                 android:textAlignment="textStart"
                 android:textSize="14sp"
-                android:layout_marginBottom="10dp"
-                android:textColor="#2962FF"/>
+                android:textColor="#611010"/>
 
 
             <TextView
                 android:id="@+id/note_list_note"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
+                android:padding="10dp"
                 android:fontFamily="sans-serif"
                 android:text="Sunday, Tuesday, Thursday"
                 android:textAlignment="textStart"
