--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -1,9 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="#FFFFFF"
     tools:context=".ui.CourseDetailsActivity">
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/classname_details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:padding="10dp"
+        android:background="#14000000"
+        android:fontFamily="@font/capriola"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:text="TextView" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/time_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:paddingVertical="10dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#00897B"
+            android:fontFamily="@font/capriola"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/days_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="#FB8C00"
+            android:paddingVertical="10dp"
+            android:fontFamily="@font/capriola"
+            android:text="TextView" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/direction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/capriola"
+            android:backgroundTint="#375516"
+            android:drawableRight="@drawable/ic_baseline_directions_24"
+            android:textStyle="bold"
+            android:text="DIRECTION" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/capriola"
+            android:layout_margin="10dp"
+            android:backgroundTint="#1D2559"
+            android:drawableEnd="@drawable/ic_baseline_alarm_add_24"
+            android:textStyle="bold"
+            android:text="SET ALARM" />
+    </LinearLayout>
+
+</LinearLayout>
