--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -17,6 +17,7 @@
         android:layout_marginLeft="10dp"
         >
         <LinearLayout
+            android:id="@+id/card_course"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
