--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -28,6 +28,7 @@
       android:layout_marginBottom="8dp"
       android:drawableEnd="@drawable/ic_baseline_add_box_24"
       android:layout_width="wrap_content"
+      android:textColor="@color/white"
       android:fontFamily="@font/aclonica"
       android:backgroundTint="#E53935"
       />
