--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="#FFFFFF"
+    android:gravity="start"
+    android:background="#E8E8E8"
     tools:context=".ui.CourseDetailsActivity">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_margin="6dp"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#FAFAFA"
+        app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:padding="10dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <TextView
         android:id="@+id/classname_details"
         android:layout_width="match_parent"
@@ -16,7 +30,6 @@
         android:textSize="20sp"
         android:textColor="#000000"
         android:padding="10dp"
-        android:background="#14000000"
         android:fontFamily="@font/capriola"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -52,36 +65,161 @@
             android:paddingVertical="10dp"
             android:fontFamily="@font/capriola"
             android:text="TextView" />
-    </LinearLayout>
 
-    <LinearLayout
+    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/direction"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:textColor="#F8F8F8"
+                    android:fontFamily="@font/capriola"
+                    android:backgroundTint="#00897B"
+                    android:drawableRight="@drawable/ic_baseline_directions_24"
+                    android:textStyle="bold"
+                    android:text="DIRECTION" />
+
+                <Button
+                    android:id="@+id/set_alarm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="#F8F8F8"
+                    android:fontFamily="@font/capriola"
+                    android:layout_margin="10dp"
+                    android:backgroundTint="#5E35B1"
+                    android:drawableEnd="@drawable/ic_baseline_alarm_add_24"
+                    android:textStyle="bold"
+                    android:text="SET ALARM" />
+            </LinearLayout>
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:textColor="#F8F8F8"
+                android:fontFamily="@font/capriola"
+                android:backgroundTint="#E53935"
+                android:textStyle="bold"
+                android:text="Delete course" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:textSize="18sp"
+       android:paddingLeft="20dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:paddingVertical="10dp"
+        android:fontFamily="@font/capriola"
+        android:text="Tasks" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-        <Button
-            android:id="@+id/direction"
-            android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="2dp"
+        app:cardBackgroundColor="#FFFFFF"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:fontFamily="@font/capriola"
-            android:backgroundTint="#375516"
-            android:drawableRight="@drawable/ic_baseline_directions_24"
-            android:textStyle="bold"
-            android:text="DIRECTION" />
+            android:gravity="center"
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <TextView
+                android:id="@+id/title_list_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Quiz 1"
+                android:background="#AEAEAE"
+                android:padding="10dp"
+                android:fontFamily="@font/aclonica"
+                android:textAlignment="textStart"
+                android:textSize="14sp"
+                android:textColor="#000000"/>
+
+
+            <TextView
+                android:id="@+id/note_list_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:fontFamily="sans-serif"
+                android:text="Topics: \nChapter 1(page 2,3)\nChapter 3"
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="13sp"
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="2dp"
+        app:cardBackgroundColor="#FFFFFF"
+        android:layout_marginLeft="10dp"
+        app:cardCornerRadius="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/capriola"
-            android:layout_margin="10dp"
-            android:backgroundTint="#1D2559"
-            android:drawableEnd="@drawable/ic_baseline_alarm_add_24"
-            android:textStyle="bold"
-            android:text="SET ALARM" />
+            android:gravity="center"
+
+            android:orientation="vertical">
+
+
+
+            <TextView
+                android:id="@+id/title_list_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Quiz 2"
+                android:background="#AEAEAE"
+                android:padding="10dp"
+                android:fontFamily="@font/aclonica"
+                android:textAlignment="textStart"
+                android:textSize="14sp"
+                android:textColor="#000000"/>
+
+
+            <TextView
+                android:id="@+id/note_list_note"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:fontFamily="sans-serif"
+                android:text="Topics: \nChapter 1(page 2,3)\nChapter 3"
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="13sp"
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
     </LinearLayout>
-
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
