--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -9,15 +9,21 @@
     android:background="#F4FDFF"
     tools:context=".ui.ClassListActivity">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="match_parent" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/course_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#F4FDFF"
-        android:layout_weight="1">
+       >
 
     </androidx.recyclerview.widget.RecyclerView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
   <Button
       android:id="@+id/button_add_course"
